--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "main": "server.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "json-server": "json-server --watch db.json",
-    "postinstall": "ng build --aot -prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -30,7 +28,6 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
-    "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "json-server": "^0.12.1",
     "material-design-icons": "^3.0.1",
@@ -58,9 +55,5 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
-  },
-  "engines": {
-    "node": "8.9.4",
-    "npm": "5.6.0"
   }
 }
