--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "todo-list",
   "version": "0.0.0",
   "license": "MIT",
-  "main": "server.js",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve --port 4203",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "json-server": "json-server --watch db.json"
   },
   "private": true,
   "dependencies": {
@@ -29,7 +29,6 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "json-server": "^0.12.1",
     "material-design-icons": "^3.0.1",
     "rxjs": "^5.5.6",
     "typescript": "~2.5.3",
