--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --prod"
+    "json-server": "json-server --watch db.json",
+    "postinstall": "ng build"
   },
   "private": true,
   "dependencies": {
@@ -31,8 +32,8 @@
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "hammerjs": "^2.0.8",
+    "json-server": "^0.12.1",
     "material-design-icons": "^3.0.1",
-    "mongodb": "^3.0.5",
     "rxjs": "^5.5.6",
     "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
